<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_hight"
                android:scaleType="centerCrop"
                android:src="@drawable/pharmacy" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:paddingLeft="@dimen/pading_8dp"
                android:text="@string/description_heading"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/teal_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_storefront_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/hazra_medical_store"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/owner_name"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_favorite_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/description"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginBottom="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_access_time_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/shop_open_close_time"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/pading_8dp"
                android:text="@string/address_heading"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/teal_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_location_on_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="Kesh Market, Mirapota Bazar, Burdwan"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/pading_8dp"
                android:text="@string/contact_heading"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textColor="@color/teal_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_local_phone_24" />

                <TextView
                    android:id="@+id/mobile_number_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/owner_phone_number"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_facebook_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/owner_fb_id"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_10dp"
                    android:src="@drawable/ic_baseline_mail_outline_24" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_10dp"
                    android:paddingLeft="@dimen/pading_25dp"
                    android:text="@string/owner_gmail"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small" />
            </LinearLayout>

            <Button
                android:id="@+id/contact_now_button_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_10dp"
                android:backgroundTint="@color/teal_200"
                android:onClick="contactButtonClick"
                android:text="@string/contact_now_button_label" />
        </LinearLayout>

</ScrollView>